# zksnark-sudokus

./: .gitignore  README.md
cairo/: Dockerfile  Makefile  README.md  run.sh
cairo/src/: main.cairo
cairo/src/util/: types.cairo  verify_columns.cairo  verify_rows.cairo
cairo_0.11/: README.md  requirements.txt  run.sh
cairo_0.11/src/: main.cairo
cairo_0.11/src/util/: verify_columns.cairo  verify_subgrids.cairo
cairo_1/: Dockerfile  README.md  Scarb.toml  cairo_project.toml  run_docker.sh
cairo_1.0/: Dockerfile  run_docker.sh
cairo_1/src/: lib.cairo  sudoku_verifier.cairo  test.cairo
cairo_1/src/test/: test_composites.cairo  test_valid_solution.cairo
cairo_1/src/util/: types.cairo  verify_puzzle_matches_solution.cairo
circom/: Dockerfile  README.md  hardhat.config.ts  package.json  run.sh  run_docker.sh  tsconfig.json
circom/circuits/: sudoku.circom  sudoku.json
circom/test/: sudoku.test.ts
contracts/: main.cairo
contracts/util/: verify_puzzle_matches_solution.cairo  verify_rows.cairo  verify_subgrids.cairo
halo2/: .gitignore  Cargo.toml  Dockerfile  README.md  run_docker.sh
halo2/src/: lib.rs  main.rs.bak  utilities.rs
leo/: Dockerfile  run.sh
leo/sudoku/: program.json
leo/sudoku/inputs/: sudoku.in
leo/sudoku/src/: main.leo
