[package]
edition = "2021"
name = "sudoku_halo2"
version = "0.1.0"

[dependencies]
ff = "0.12"
group = "0.12.0"
halo2 = {package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2022_10_22", features = ["dev-graph"]}
halo2wrong = {git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", default-features = true}
maingate = {git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", default-features = true}
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
pairing = {git = 'https://github.com/appliedzkp/pairing', package = "pairing_bn256", "tag" = "v0.1.1"}
rand = "0.8.5"
rand_core = {version = "0.6", default-features = false}
rayon = "1.5.1"

# Developer tooling dependencies
plotters = {version = "0.3.0"}
tabbycat = {version = "0.1", features = ["attributes"]}

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.3"
